--- a/R-contacto.html
+++ b/R-contacto.html
@@ -49,13 +49,28 @@
             </ul>
         </nav>
         <header>
-            <h1> Mis redes son</h1>
-            <p> Facebook, instagram, X , git hub +</p>
+            <h1> Mis Redes</h1>
+            <p> </p>
             <img src="imgs/" alt="">
         </header>
     </div>
 
-
     <img src="img.cont/Board cover.jpeg" alt="" class="mascota" >
+
+    <div class="contenedor-redes contenedor-cel">
+       <!--   <a href="https://wa.me/573147260658" target="_blank"> -->
+        <img src="img.cont/iconoW.png" alt="WhatsApp" class="icono-red  iconoc">
+       </a>
+        <!--  <a href="https://www.instagram.com/ismael_carog/" target="_blank"> -->
+        <img src="img.cont/iconoI.jpeg" alt="Instagram" class="icono-red iconoc">
+        </a>
+        <!--  <a href="https://www.tiktok.com/@negro_cg" target="_blank"> -->
+        <img src="img.cont/iconoT.png" alt="Tiktok" class="icono-red iconoc" >
+        </a>
+       <!--  <a href="https://github.com/IsmaelCG06" target="_blank"> -->
+        <img src="img.cont/iconoG.png" alt="GitHub" class="icono-red iconoc"  >
+        </a>
+    </div>
+    
 </body>
 </html>
