--- a/L-sobre mi.html
+++ b/L-sobre mi.html
@@ -50,12 +50,48 @@
         </nav>
         <header>
             <h1> Soy Ismael Caro</h1>
-            <p>Un estudiante del primer semestre en ingenería en sistemas</p>
+            <p> </p>
             <img src="imgs/" alt="">
         </header>
     </div>
-
-
     <img src="img.cont/Board cover.jpeg" alt="" class="mascota" >
+
+    <div class="tarjeta-hover estudiante-box">
+  <div class="tarjeta-header">Estudiante</div>
+  <div class="tarjeta-contenido">
+    <p>Actualmente curso primer semestre en Ing de sistemas</p>
+    <p>Mis fuertes son..</p>
+    <ul>
+      <li>Programación</li>
+      <li>Algoritmos</li>
+      <li>Html and css..</li>
+    </ul>
+  </div>
+</div>
+
+<div class="tarjeta-hover  experiencia-box">
+  <div class="tarjeta-header">Experiencia</div>
+  <div class="tarjeta-contenido">
+    <p>Tengo experiencia en:</p>
+    <ul>
+      <li>Asesoramiento en ventas</li>
+      <li>Creacion de sistemas automatizados</li>
+      <li>Creacion de paginas web</li>
+    </ul>
+  </div>
+</div>
+
+<div class="tarjeta-hover pasatiempos-box">
+  <div class="tarjeta-header">Pasatiempos</div>
+  <div class="tarjeta-contenido">
+    <p>Lo que me gusta hacer en mi tiempo libre:</p>
+    <ul>
+      <li>Leer libros</li>
+      <li>Jugar videojuegos</li>
+      <li>Escuchar música</li>
+    </ul>
+  </div>
+</div>
+
 </body>
 </html>
