--- a/Proyecto.html
+++ b/Proyecto.html
@@ -50,10 +50,90 @@
         </nav>
         <header>
             <h1> MI PROYECTO DE VIDA</h1>
-            <p>Ganar los cortes, parciales, semestre, profesional ....</p>
+            <p></p>
             <img src="imgs/" alt="">
         </header>
+        
     </div>
+
+
+    <main>
+  <section class="proyecto">
+
+    <h2>Fortalezas</h2>
+    <ul class="fortalezas">
+      <li>Compromiso conmigo mismo y con los demás.</li>
+      <li>Facilidad para aprender.</li>
+      <li>Trabajo eficiente.</li>
+      <li>Comunicación efectiva.</li>
+      <li>Habilidad para trabajar en bajo presión.</li>
+      <li>Adaptabilidad.</li>
+    </ul>
+
+    <h2>Debilidades</h2>
+    <ul class="debilidades">
+      <li>Procrastinación</li>
+      <li>Dificultad para poner límites.</li>
+      <li>Dificultad lectora.</li>
+      <li>Dependencia excesiva del perfeccionismo.</li>
+    </ul>
+  </section>
+
+  <section class="metas">
+  <h2>Metas y Objetivos</h2>
+
+  <h3>Corto Plazo</h3>
+  <ul>
+    <li>Ganar el semestre.</li>
+    <li>Mejorar mi nivel de inglés.</li>
+    <li>Adquirir nuevas habilidades en programación.</li>
+  </ul>
+
+  <h3>Mediano Plazo</h3>
+  <ul>
+    <li>Viajar a Chile.</li>
+    <li>Certificaciones en diseño, IA, etc.</li>
+    <li>Comprar una moto.</li>
+  </ul>
+
+  <h3>Largo Plazo</h3>
+  <ul>
+    <li>Especialización en Sistemas y Redes.</li>
+    <li>Hablar francés.</li>
+    <li>Independizarme.</li>
+    <li>Tener empresa de desarrollo.</li>
+  </ul>
+</section>
+
+<section class="logros" > 
+    <h2> 
+        ¿Como pienso lograrlo?
+    </h2>
+
+    <h3> Corto plazo </h3> 
+    <ul>
+        <li>Dedicarme un 90% a mis estudios y dejar la procrastinacion.</li>
+        <li>Tomar clases de ingles personalizadas para mejorar mi vocabulario.</li>
+        <li>Hacer pequeños cursos de programación para mejorar mi lógica.</li>
+    </ul>
+
+    <h3> Mediano plazo</h3>
+    <ul>
+        <li>Interactuar por internet con personas de habla inglesa.</li>
+        <li>A través de ahorro y de los trabajos de medio tiempo que tengo en vacaciones poder viajar y visitar a mis familiares que están en chile.
+        </li>
+        <li>Con los cursos que hago y a través del grupo de investigación que me encuentro actualmente en la UdC, pedir a cierto órgano de la Universidad un certificado que me valide de ciertas habilidades relacionadas con programación y el uso de tecnologías.
+        </li>
+        <li>Con este portafolio reutilizarlo y comenzar a ofrecer mis servicios a pequeñas empresas o emprendimientos que quieran crecer.</li>
+    </ul>
+
+
+
+</section>
+
+
+
+</main>
 
 
     <img src="img.cont/Board cover.jpeg" alt="" class="mascota" >
