--- a/R-contacto.html
+++ b/R-contacto.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style4.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>CONTACTO</title>
 
     <!--Fondo de la pagina web-->
@@ -58,17 +59,17 @@
     <img src="img.cont/Board cover.jpeg" alt="" class="mascota" >
 
     <div class="contenedor-redes contenedor-cel">
-       <!--   <a href="https://wa.me/573147260658" target="_blank"> -->
-        <img src="img.cont/iconoW.png" alt="WhatsApp" class="icono-red  iconoc">
-       </a>
-        <!--  <a href="https://www.instagram.com/ismael_carog/" target="_blank"> -->
-        <img src="img.cont/iconoI.jpeg" alt="Instagram" class="icono-red iconoc">
+        <a href="https://wa.me/573147260658" target="_blank"> 
+        <!-- Whatsapp -->
+        <i class="fab fa-whatsapp fa-10x" style="color: #25d366;"></i>
         </a>
-        <!--  <a href="https://www.tiktok.com/@negro_cg" target="_blank"> -->
-        <img src="img.cont/iconoT.png" alt="Tiktok" class="icono-red iconoc" >
+        <a href="https://www.instagram.com/ismael_carog/" target="_blank"> 
+        <!-- Instagram -->
+        <i class="fab fa-instagram fa-10x" style="color: #ac2bac;"></i>
         </a>
-       <!--  <a href="https://github.com/IsmaelCG06" target="_blank"> -->
-        <img src="img.cont/iconoG.png" alt="GitHub" class="icono-red iconoc"  >
+        <a href="https://github.com/IsmaelCG06" target="_blank"> 
+        <!-- Github -->
+        <i class="fab fa-github fa-10x" style="color: #333333;"></i>
         </a>
     </div>
     
