--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
         </nav>
         <header>
             <h1> BIENVENIDOS</h1>
-            <p>A mi primera pagina web y portafolio..</p>
+            <p>This is my website and portfolio</p>
             <img src="imgs/" alt="">
         </header>
     </div>
   
-    <img src="img.cont/Cocktail.jpg" alt="" class="img-cont" > 
+    
     <img src="img.cont/Board cover.jpeg" alt="" class="mascota" >
 
-    <h2>¿QUIEN SOY?</h2>
+    <h2></h2>
    
 </body>
 </html>
